# agentic-runtime

./: .archguard.yml  .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.archguard/: metrics.json
core/: __init__.py  context_manager.py  factory.py  policies.py  settings.py  tool_runtime.py
core/durability/: __init__.py  agent.py  hooks.py  journal.py  keys.py  policy.py  runner.py  state.py
core/prompts/: __init__.py  system.py
core/tools/: __init__.py  coding.py  daytona.py  git.py  hooks.py  knowledge.py  local.py  mcp.py  reasoning.py  sandbox.py
docs/brainstorms/: 2026-02-17-durable-execution-brainstorm.md
docs/plans/: 2026-02-17-feat-durable-execution-checkpoint-resume-plan.md
examples/: 01_basic_agent.py  02_code_execution_agent.py  03_data_analysis_agent.py  04_mcp_agent.py  05_full_featured_agent.py  06_conversational_session.py  07_structured_output.py  08_multi_agent_team.py  09_agentic_coding_agent.py  10_xlsx_skill_agent.py  README.md
specs/: CODEBASE_DIAGRAM.md
tests/: test_durability.py  test_factory.py  test_policies.py  test_smoke_local_tools.py  test_tool_call_conformance.py
